RESOLVED FIXED212262
REGRESSION (r261978): Cannot click on links with trackpad on iPad
https://bugs.webkit.org/show_bug.cgi?id=212262
Summary REGRESSION (r261978): Cannot click on links with trackpad on iPad
Tim Horton
Reported 2020-05-22 05:54:47 PDT
REGRESSION (r261978): Cannot click on links with trackpad on iPad
Attachments
Patch (3.07 KB, patch)
2020-05-22 05:54 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-05-22 05:54:56 PDT
EWS
Comment 2 2020-05-22 06:56:40 PDT
Committed r262055: <https://trac.webkit.org/changeset/262055> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400041 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-22 06:57:16 PDT
Note You need to log in before you can comment on or make changes to this bug.